[css-text] Keep track of the initial offset for each handled text

In order to identify single leading white-spaces as potential line
breaking opportunities we need to know the offset the iterator starts
at for the current text to handle.

When we landed the change in r596406 we incorrectly assumed that
leading white-spaces were always at offset 1. However, this is not
valid when such leading white-spaces are generated by previous broken
lines.

This CL solves the issue by using the stored initial offset to identify
such single leading white-spaces as potential breaking opportunities.

Bug: 900727
Change-Id: Ibc9dda7632d72ed82a61025015489ec3b70d6919
Reviewed-on: https://chromium-review.googlesource.com/c/1311274
Commit-Queue: Javier Fernandez <jfernandez@igalia.com>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605055}
Former-commit-id: 4dc6641110334fe6a1807f37278ae543d2bb76ae